Corrected spelling and added better spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11958,7 +11958,8 @@ textarea.form-control-lg {
 .education {
   font-family: serif;
   background-color: #E9E9E9;
-  padding-bottom: 100px;
+  padding-bottom: 5vw;
+  border: 2px solid red;
 }
 .education h2 {
   font-size: 4em;
@@ -12031,11 +12032,18 @@ textarea.form-control-lg {
 .education .circles .circle .diploma a:hover {
   color: #E9E9E9;
 }
+.education .skills {
+  padding-top: 5vw;
+}
+.education .skills .row {
+  padding: 2vw;
+}
 
 .projects {
   font-family: serif;
   background-color: #E9E9E9;
-  padding-bottom: 30px;
+  padding-top: 5vw;
+  padding-bottom: 3vw;
 }
 .projects h2 {
   font-size: 4em;
@@ -12076,6 +12084,7 @@ textarea.form-control-lg {
   font-family: serif;
   background-color: #E9E9E9;
   text-align: center;
+  padding-top: 5vw;
 }
 .contact-me .container-fluid {
   display: flex;
